Don't send basic auth with API 1.0 requests. (Kind of broken.) Refactor some stuff.