@@ -14,7 +14,7 @@
 // You should have received a copy of the GNU General Public License
 // along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
-package com.rightscale.provider;
+package com.rightscale.provider.rest;
 
 import net.xeger.rest.ProtocolError;
 import net.xeger.rest.RestException;
@@ -22,6 +22,8 @@ import net.xeger.rest.Session;
 
 import org.json.JSONException;
 import org.json.JSONObject;
+
+import com.rightscale.provider.*;
 
 import android.database.Cursor;
 import android.database.MatrixCursor;
@@ -76,7 +78,7 @@ public class ServerSettingsResource extends DashboardResource {
 		String href = getResourceURI("servers/" + server_id + "/settings.js", null).toString();
 		int cloud_id;
 		if(object.has("cloud_id")) {
-			cloud_id = new Integer(object.getString("cloud_id")).intValue(); 
+			cloud_id = Integer.valueOf(object.getString("cloud_id")).intValue(); 
 		}
 		else {
 			cloud_id = 0;
